[gd_scene load_steps=2 format=3 uid="uid://c3588n26qtjwx"]

[ext_resource type="Script" uid="uid://ds7y7qjjtlh1h" path="res://src/components/ui/UpgradePicker.gd" id="1_4cwyo"]

[node name="UpgradePicker" type="CanvasLayer"]
script = ExtResource("1_4cwyo")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.427
anchor_top = 0.472
anchor_right = 0.427
anchor_bottom = 0.472
offset_left = -214.84
offset_top = -327.76
offset_right = -83.84
offset_bottom = -304.76
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Elige una mejora"

[node name="Btn0" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Btn1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Btn2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
